--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.5.0
         with:
-          username: zu1k
+          username: XingXiaoWu
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: zu1k/proxypool/proxypool
+          repository: XingXiaoWu/proxypool/proxypool
           tag_with_ref: true
